SERVER-57051 Shard may fail to notify that router was stale for command in multi-statement transaction

(cherry picked from commit 4493d9309d2622844c41195baa6aadde2005362c)